# quora-api

./: .coveragerc  .editorconfig  .flake8  .gitignore  .travis.yml  Dockerfile  Dockerfile.web  Procfile  README  README.md  TODO  api.apib  app.json  heroku.yml  pyproject.toml  release_tasks.sh  requirements.txt  tox.ini  uwsgi.ini
app/: app.py  settings.py  uwsgi.ini
migrations/versions/: 748ffd4c62c2_authentication_rework.py  7d9ded4b3774_auto_updated_at.py  874ed61bf8d0_alter_timestamps.py  8a0babe4c14b_refresh_tokens.py  eb37f51d95d3_add_questions_tables.py  f8325c4f3c77_nullable_pw_hash.py
src/: .env.example  MANIFEST.in  Pipfile  app.py  pyproject.toml  settings.py  setup.py  tox.ini
src/accounts/: __init__.py  authentication.py  mailer.py  repository.py  resources.py  routes.py  schemas.py  tables.py
src/accounts/libs/password/: __init__.py
src/accounts/templates/accounts/: activation_mail.html
src/accounts/tests/: helpers.py
src/accounts/tests/schemas/: test_login_schema.py
src/auth/: __init__.py  custom_jwt_extended.py  repository.py  resources.py  schemas.py  services.py  tables.py
src/db/: __init__.py  mixins.py
src/libs/password/: __init__.py
src/migrations/versions/: 328f7bdc03dd_add_activated_at_to_accounts.py  7deeca3e4e25_remove_timezone.py  85d241f06838_detect_server_default.py  98f1a9fe4709_create_uuid_extension.py  cc757507e996_add_accounts_table.py  eb37f51d95d3_add_questions_tables.py
src/questions/: resources.py  routes.py  schemas.py  tables.py
src/quora/: __init__.py  extensions.py  tables.py
src/quora/api/: __init__.py
src/quora/blueprints/api/: __init__.py  accounts.py  auth.py
src/quora/blueprints/api/resources/: accounts.py  auth.py
src/quora/models/: account.py
src/quora/repository/: __init__.py  account.py
src/quora/schemas/: account.py  token.py  validations.py
src/quora/services/: authentication.py  password.py
src/quora/services/password/: __init__.py
src/quora/tables/: __init__.py  accounts.py  mixins.py
src/tests/test_accounts/schemas/: test_client_mail_context_schema.py  test_login_schema.py  test_registration_schema.py
src/tests/test_quora/: conftest.py  settings.py  test_factory.py
src/tests/test_quora/accounts/: test_account_apis.py
src/utils/: decorators.py  typing.py
src/utils/schemas/: __init__.py  validations.py
src/utils/tables/: __init__.py  mixins.py  repository.py
src/utils/views/: mixins.py
tests/test_accounts/schemas/: test_login_schema.py
tests/test_modules/test_accounts/schemas/: test_registration_schema.py
tests/test_modules/test_auth/: conftest.py  test_login_schema.py
tests/test_quora/: conftest.py  test_factory.py
tests/test_quora/accounts/: test_account_apis.py
